<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/surveyQuestion"
        style="@style/SurveyQuestion"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/camera_priview_border" >

        <FrameLayout
            android:id="@+id/cameraPreview"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:padding="5dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tap_to_scan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/barcode_scaner_text"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/scanText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_app_text"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" 
        android:weightSum="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/ScanButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:background="@drawable/reset_timer_btn"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="@drawable/reset_timer_btn"
            android:layout_weight="1"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>